force-app/main/default/objects/Modulo_disponible__mdt/Modulo_disponible__mdt.object-meta.xml
<CustomObject>
    <label>Módulo disponible</label>
    <pluralLabel>Módulos disponibles</pluralLabel>
</CustomObject>