force-app/main/default/objects/Modulo_disponible__mdt/fields/Modulo_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Modulo_de_Paciente__c</fullName>
    <label>Modulo de Paciente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>