force-app/main/default/objects/Modulo_disponible__mdt/fields/Nombre_del_Modulo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Modulo__c</fullName>
    <label>Nombre del Modulo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>